--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"lib": ["DOM", "ES2020"],
 		"module": "ESNext",
 		"jsx": "react-jsx",
-		// "strict": true,
+		"strict": true,
 		"skipLibCheck": true,
 		"isolatedModules": true,
 		"resolveJsonModule": true,
